# TherapyBot

./: .gitignore  README.md  db.sqlite3  testingAI.py
backend/: db.sqlite  pyproject.toml  testingAI.py
backend/djangoProject/: settings.py  urls.py
backend/storage/: default__vector_store.json  docstore.json  index_store.json
backend/templates/therapy/: HomePage.html
backend/therapybot/: models.py  urls.py  views.py
djangoProject/: settings.py  urls.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: ForgotPasswordPage.tsx  Login.tsx  Navbar.tsx  Register.tsx  ResetPasswordPage.tsx  TherapyForm.tsx
frontend/src/context/: AuthContext.tsx  UserContext.tsx
frontend/src/pages/: GettingStarted.tsx  Home.tsx
static/: nav.css
static/css/: nav.css
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_done.html  password_reset_form.html  register.html
templates/therapy/: HomePage.html  base.html  get_started.html
therapybot/: forms.py  models.py  urls.py  views.py
