[tool.poetry]
name = "therapybot"
version = "0.1.0"
description = "Therapy Bot backend"
authors = ["Rasheed Martin <rasheedjmartin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
llama-index = "^0.14.7"
llama-index-readers-web = "^0.1.3"  # for SimpleWebPageReader

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.9.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
